<resources>
    <string name="app_name">NavBarTest</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Shopping App</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_about_us">About Us</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_shop_now">Shop Now!</string>
    <string name="menu_logout">Log Out</string>
    <string name="menu_view_lists">View Lists</string>
    <string name="menu_view_map">View Map</string>
    <string name="menu_create_list">Create List</string>


</resources>
