<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_about_us"/>
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_dashboard"/>
        <item
            android:id="@+id/nav_view_maps"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_view_map"/>
        <item
            android:id="@+id/nav_view_lists"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_view_lists"/>
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_logout"/>
    </group>

</menu>